--- a/GifConvert.csproj
+++ b/GifConvert.csproj
@@ -22,4 +22,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SampleOutput\" />
+  </ItemGroup>
 </Project>
